--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.3",
     "@mui/styled-engine-sc": "^6.1.3",
@@ -18,7 +23,11 @@
     "next": "^14.2.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "styled-components": "^6.1.13"
+    "react-tsparticles": "^2.12.2",
+    "styled-components": "^6.1.13",
+    "tailwind-fontawesome": "^0.7.1",
+    "tsparticles": "^3.5.0",
+    "tsparticles-engine": "^2.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
